apps/internal-router/overlays/local51/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local51-internal-router-ingress
  namespace: local51
spec:
  ingressClassName: nginx
  rules:
  - host: andrii.cd-team.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
